Fixed spacing issue for Opera

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -25,7 +25,7 @@
 }
 
 #tag {
-
+  word-spacing: normal;
   color: #9a9994;
   font-size: 25px;
 }
